Fix Tutorial for adding new models

--- a/tutorials/NEST_Adding_Models_Tutorial.ipynb
+++ b/tutorials/NEST_Adding_Models_Tutorial.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2903FrDpACVU"
+      },
       "source": [
         "# Welcome to the NEST Model Integration Tutorial\n",
         "\n",
@@ -132,13 +121,13 @@
         "```\n",
         "\n",
         "This is the required structure. Each method must be implemented for your model to work with NEST.\n"
-      ],
-      "metadata": {
-        "id": "2903FrDpACVU"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4n3VUrd1MnSm"
+      },
       "source": [
         "# 3. How to Implement a New Model into NEST\n",
         "\n",
@@ -155,13 +144,13 @@
         "   - Response generation  \n",
         "   - Metadata access  \n",
         "   - Resource cleanup  \n"
-      ],
-      "metadata": {
-        "id": "4n3VUrd1MnSm"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "nk4SHF9T8YEk"
+      },
       "source": [
         "## 3.1: Where Does Your Model Belong?\n",
         "\n",
@@ -180,13 +169,13 @@
         "\n",
         "Your corresponding **YAML configuration file** should go here:  \n",
         "`nest/models/model_cards/your_model_id.yaml`"
-      ],
-      "metadata": {
-        "id": "nk4SHF9T8YEk"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "S9QlN874PGAY"
+      },
       "source": [
         "\n",
         "---\n",
@@ -212,13 +201,13 @@
         "Here's what you need to include:\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "S9QlN874PGAY"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ld8ZojZNPghr"
+      },
       "source": [
         "```yaml\n",
         "# Template YAML file for NEST model specification\n",
@@ -227,10 +216,9 @@
         "# Basic metadata\n",
         "model_id: modality_dataset_model_type  # e.g., fmri_nsd_fwrf\n",
         "modality: modality  # e.g., fmri, eeg, meg, ...\n",
-        "dataset: dataset_name\n",
-        "features: feature_extraction_method\n",
-        "repeats: single/multi  # whether model generates single or multiple repetitions\n",
-        "subject_specific: true/false  # whether model is subject-specific\n",
+        "training_dataset: dataset_name\n",
+        "model_architecture: feature_extraction_method\n",
+        "creator: your_name\n",
         "\n",
         "# General description of the model\n",
         "description: |\n",
@@ -302,13 +290,13 @@
         "references:\n",
         "    - \"Citation for your model or dataset\"\n",
         "```"
-      ],
-      "metadata": {
-        "id": "ld8ZojZNPghr"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YsPKENefR2GG"
+      },
       "source": [
         "## 3.3: Implementing the Model Class\n",
         "\n",
@@ -318,13 +306,13 @@
         "You are free to add additional helper functions as needed — but the core methods must be implemented.\n",
         "\n",
         "---\n"
-      ],
-      "metadata": {
-        "id": "YsPKENefR2GG"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ax7ne30Ez-jf"
+      },
       "source": [
         "### 3.3.1: Model Registration\n",
         "\n",
@@ -335,13 +323,13 @@
         "1. Loads your model's configuration from the YAML file  \n",
         "2. Registers your model with the NEST registry, making it discoverable  \n",
         "3. Specifies the module path, class name, and modality"
-      ],
-      "metadata": {
-        "id": "Ax7ne30Ez-jf"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dofNplJfdjDV"
+      },
       "source": [
         "```python\n",
         "import os\n",
@@ -368,13 +356,13 @@
         "    yaml_path=os.path.join(os.path.dirname(__file__), \"..\", \"model_cards\", \"your_model_id.yaml\")\n",
         ")\n",
         "```"
-      ],
-      "metadata": {
-        "id": "dofNplJfdjDV"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dWnvGCZo0Jz-"
+      },
       "source": [
         "---\n",
         "\n",
@@ -388,13 +376,13 @@
         "2. Validates parameters against the specifications in the YAML file  \n",
         "3. Sets up the compute device (CPU or GPU)  \n",
         "4. Can process additional model-specific parameters through `**kwargs`"
-      ],
-      "metadata": {
-        "id": "dWnvGCZo0Jz-"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fNM7j5cph8kz"
+      },
       "source": [
         "\n",
         "```python\n",
@@ -447,13 +435,13 @@
         "        \n",
         "        # Add any other parameter validation here\n",
         "```"
-      ],
-      "metadata": {
-        "id": "fNM7j5cph8kz"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pTiyAfrv0OWm"
+      },
       "source": [
         "---\n",
         "### 3.3.3: Loading the Model\n",
@@ -470,13 +458,13 @@
         "\n",
         "> Remember to customize the model loading code for your specific architecture and framework (e.g., PyTorch, TensorFlow, etc.).\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "pTiyAfrv0OWm"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sXXdjkLgk3EA"
+      },
       "source": [
         "\n",
         "```python\n",
@@ -503,13 +491,13 @@
         "        except Exception as e:\n",
         "            raise ModelLoadError(f\"Failed to load model: {str(e)}\")\n",
         "```\n"
-      ],
-      "metadata": {
-        "id": "sXXdjkLgk3EA"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4AqmDu400QxE"
+      },
       "source": [
         "---\n",
         "### 3.3.4: Generating Responses\n",
@@ -526,13 +514,13 @@
         "\n",
         "Customize this method based on your model's specific requirements and output format.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "4AqmDu400QxE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pukmJ-rundzw"
+      },
       "source": [
         "\n",
         "```python\n",
@@ -583,13 +571,13 @@
         "        \n",
         "        return dummy_response\n",
         "```"
-      ],
-      "metadata": {
-        "id": "pukmJ-rundzw"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CsEkzHHX0TO1"
+      },
       "source": [
         "---\n",
         "### 3.3.5: Accessing Metadata\n",
@@ -604,13 +592,13 @@
         "\n",
         "The metadata may include information about voxel indices, channel information, region details, or other model-specific information.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "CsEkzHHX0TO1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6sMQ8Is4o3-Y"
+      },
       "source": [
         "\n",
         "```python\n",
@@ -638,13 +626,13 @@
         "                \"subject\": self.subject,\n",
         "                # Add any other relevant metadata\n",
         "            }\n"
-      ],
-      "metadata": {
-        "id": "6sMQ8Is4o3-Y"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pimREama0V23"
+      },
       "source": [
         "---\n",
         "### 3.3.6: Auxiliary Methods\n",
@@ -662,13 +650,13 @@
         "2. Is important for preventing memory leaks when working with multiple models  \n",
         "3. Should clean up any large objects or references\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "pimREama0V23"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Rh_p0NzPpgBc"
+      },
       "source": [
         "\n",
         "```python\n",
@@ -700,20 +688,17 @@
         "            if torch.cuda.is_available():\n",
         "                torch.cuda.empty_cache()\n",
         "  ```"
-      ],
-      "metadata": {
-        "id": "Rh_p0NzPpgBc"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fpl76IUZxXcI"
+      },
       "source": [
         "---\n",
         "### 3.3.7. This is how the full model function could look like:"
-      ],
-      "metadata": {
-        "id": "fpl76IUZxXcI"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -927,6 +912,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "dwAOJr9u3bdo"
+      },
       "source": [
         "---\n",
         "---\n",
@@ -982,13 +970,13 @@
         "│   └── model_cards/\n",
         "│       └── your_model_id.yaml\n",
         "```\n"
-      ],
-      "metadata": {
-        "id": "dwAOJr9u3bdo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1EE_DWTZ-4Jo"
+      },
       "source": [
         "---\n",
         "\n",
@@ -1026,10 +1014,21 @@
         "\n",
         "We look forward to your contributions and are excited to see the creative ways the community expands NEST!\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "1EE_DWTZ-4Jo"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
