Changing Naming-Convention of models

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 267.24it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 273.00it/s]"
      ]
     },
     {
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available models: ['fmri_nsd_fwrf', 'eeg_things_eeg_2_vit_b_32']\n",
+      "Available models: ['fmri-nsd-fwrf', 'eeg-things_eeg_2-vit_b_32']\n",
       "Available Modalities and Datasets:\n",
       "=================================\n",
       "• EEG\n",
@@ -161,20 +161,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.21it/s, Encoded images=100, Total images=100]\n",
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.83s/it, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.29it/s, Encoded images=100, Total images=100]\n",
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.78s/it, Encoded images=100, Total images=100]\n"
      ]
     }
    ],
    "source": [
     "# Load Encoding Model\n",
-    "fwrf_model = nest.get_encoding_model(\"fmri_nsd_fwrf\", \n",
+    "fwrf_model = nest.get_encoding_model(\"fmri-nsd-fwrf\", \n",
     "                                     subject=1, \n",
     "                                     roi=\"V1\",\n",
     "                                     device=\"cpu\")\n",
     "\n",
     "\n",
-    "eeg_model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", \n",
+    "eeg_model = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", \n",
     "                                    subject=1,\n",
     "                                    device=\"auto\")\n",
     "\n",
@@ -227,7 +227,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "🧠 Model: fmri_nsd_fwrf\n",
+      "🧠 Model: fmri-nsd-fwrf\n",
       "================================================================================\n",
       "\n",
       "Modality: fmri\n",
@@ -325,7 +325,8 @@
       "  Performance plots at: neural_encoding_simulation_toolkit/encoding_models/modality-fmri/train_dataset-nsd/model-fwrf/encoding_models_accuracy\n",
       "\n",
       "📚 References:\n",
-      "    • x\n",
+      "    • https://doi.org/10.1016/j.neuroimage.2017.06.035\n",
+      "    • https://doi.org/10.1038/s41593-021-00962-x\n",
       "\n",
       "📦 Example Usage:\n",
       "\n",
@@ -334,7 +335,7 @@
       "nest = NEST(\"/path/to/nest_dir\")\n",
       "\n",
       "# Initialize the model\n",
-      "model = nest.get_encoding_model(\"fmri_nsd_fwrf\", subject=1, roi='V1', nest_dir='./')\n",
+      "model = nest.get_encoding_model(\"fmri-nsd-fwrf\", subject=1, roi='V1', nest_dir='./')\n",
       "\n",
       "# Generate responses (assuming stimulus is a numpy array)\n",
       "responses = model.generate_response(stimulus)\n",
@@ -348,7 +349,7 @@
     "nest = NEST(nest_dir=nest_dir)\n",
     "\n",
     "# Choose a model of interest\n",
-    "model_id = \"fmri_nsd_fwrf\"  # Example model ID\n",
+    "model_id = \"fmri-nsd-fwrf\"  # Example model ID\n",
     "\n",
     "# Get comprehensive model information\n",
     "model_info = nest.describe(model_id)\n"
@@ -369,7 +370,7 @@
    ],
    "source": [
     "# Load Encoding Model\n",
-    "fwrf_model = nest.get_encoding_model(\"fmri_nsd_fwrf\", \n",
+    "fwrf_model = nest.get_encoding_model(\"fmri-nsd-fwrf\", \n",
     "                                     subject=1, \n",
     "                                     roi=\"V1\")"
    ]
@@ -390,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.34it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.35it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -437,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.28it/s, Encoded images=100, Total images=100]\n"
+      "Encoding fMRI responses: 100%|██████████| 1/1 [00:00<00:00,  1.37it/s, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -870,7 +871,7 @@
     "nest = NEST(nest_dir=nest_dir)\n",
     "\n",
     "\n",
-    "eeg_model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", \n",
+    "eeg_model = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", \n",
     "                                    subject=1)"
    ]
   },
@@ -883,7 +884,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding EEG responses: 100%|██████████| 1/1 [00:01<00:00,  1.78s/it, Encoded images=100, Total images=100]\n"
+      "Encoding EEG responses: 100%|██████████| 1/1 [00:02<00:00,  2.05s/it, Encoded images=100, Total images=100]\n"
      ]
     },
     {
@@ -5046,7 +5047,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "🧠 Model: eeg_things_eeg_2_vit_b_32\n",
+      "🧠 Model: eeg-things_eeg_2-vit_b_32\n",
       "================================================================================\n",
       "\n",
       "Modality: eeg\n",
@@ -5116,7 +5117,7 @@
       "  Performance plots at: neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy\n",
       "\n",
       "📚 References:\n",
-      "    • x\n",
+      "    • https://doi.org/10.1038/s41593-021-00962-x\n",
       "\n",
       "📦 Example Usage:\n",
       "\n",
@@ -5125,7 +5126,7 @@
       "nest = NEST(\"/path/to/nest_dir\")\n",
       "\n",
       "# Initialize the model\n",
-      "model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir='./')\n",
+      "model = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", subject=1, nest_dir='./')\n",
       "\n",
       "# Generate responses (assuming stimulus is a numpy array)\n",
       "responses = model.generate_response(stimulus)\n",
@@ -5136,7 +5137,7 @@
     {
      "data": {
       "text/plain": [
-       "{'model_id': 'eeg_things_eeg_2_vit_b_32',\n",
+       "{'model_id': 'eeg-things_eeg_2-vit_b_32',\n",
        " 'model_info': {'modality': 'eeg',\n",
        "  'training_dataset': 'things_eeg_2',\n",
        "  'model_architecture': 'vision transformer (ViT-B/32)',\n",
@@ -5220,7 +5221,7 @@
        "    'description': 'Whether to show a progress bar during encoding (for large batches)',\n",
        "    'function': 'encode'}}},\n",
        " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy']},\n",
-       " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
+       " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
      "execution_count": 13,
@@ -5229,7 +5230,7 @@
     }
    ],
    "source": [
-    "nest.describe(\"eeg_things_eeg_2_vit_b_32\")"
+    "nest.describe(\"eeg-things_eeg_2-vit_b_32\")"
    ]
   },
   {
@@ -5242,7 +5243,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "🧠 Model: eeg_things_eeg_2_vit_b_32\n",
+      "🧠 Model: eeg-things_eeg_2-vit_b_32\n",
       "================================================================================\n",
       "\n",
       "Modality: eeg\n",
@@ -5312,7 +5313,7 @@
       "  Performance plots at: neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy\n",
       "\n",
       "📚 References:\n",
-      "    • x\n",
+      "    • https://doi.org/10.1038/s41593-021-00962-x\n",
       "\n",
       "📦 Example Usage:\n",
       "\n",
@@ -5321,7 +5322,7 @@
       "nest = NEST(\"/path/to/nest_dir\")\n",
       "\n",
       "# Initialize the model\n",
-      "model = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir='./')\n",
+      "model = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", subject=1, nest_dir='./')\n",
       "\n",
       "# Generate responses (assuming stimulus is a numpy array)\n",
       "responses = model.generate_response(stimulus)\n",
@@ -5332,7 +5333,7 @@
     {
      "data": {
       "text/plain": [
-       "{'model_id': 'eeg_things_eeg_2_vit_b_32',\n",
+       "{'model_id': 'eeg-things_eeg_2-vit_b_32',\n",
        " 'model_info': {'modality': 'eeg',\n",
        "  'training_dataset': 'things_eeg_2',\n",
        "  'model_architecture': 'vision transformer (ViT-B/32)',\n",
@@ -5416,7 +5417,7 @@
        "    'description': 'Whether to show a progress bar during encoding (for large batches)',\n",
        "    'function': 'encode'}}},\n",
        " 'performance': {'accuracy_plots': ['neural_encoding_simulation_toolkit/encoding_models/modality-eeg/train_dataset-things_eeg_2/model-vit_b_32/encoding_models_accuracy']},\n",
-       " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg_things_eeg_2_vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
+       " 'example_usage': 'from nest import NEST\\n\\nnest = NEST(\"/path/to/nest_dir\")\\n\\n# Initialize the model\\nmodel = nest.get_encoding_model(\"eeg-things_eeg_2-vit_b_32\", subject=1, nest_dir=\\'./\\')\\n\\n# Generate responses (assuming stimulus is a numpy array)\\nresponses = model.generate_response(stimulus)'}"
       ]
      },
      "execution_count": 14,
